chore(runtime): evaluate virtual threads on SB4 + Hibernate7 + Lettuce, lock baseline
Phase 6 of add-actuator-health: empirically validated spring.threads.virtual.enabled=true
under SB4 + JDK 21 + Hibernate 7.1 + Lettuce 6.x + Spring Session Redis Indexed by
temporarily enabling the flag in ulp-console and running the full IT suite.

Result: 15/15 IT pass (1:11 min, 0 failures, 0 errors), Spring boot starts clean, no
'pinning detected' / 'deadlock' in logs. Coverage spans Spring Security 7 filter chain,
JPA/Hibernate 7 transactions, MySQL JDBC, Redis Lettuce (actuator/health), MapStruct,
Liquibase startup, Spring Session Indexed.

Conclusion: keep disabled. Limitations of this evaluation (pinning trace not actually
wired into Failsafe argLine, only ulp-console covered, serial MockMvc not concurrent
load, SSO protocol paths have no IT coverage) mean this is "not obviously broken" not
"production safe". Spec retains the "disabled by default" requirement and tightens the
PR enablement bar (must include three-deployable IT runs + pinning trace + main-path
load test).

- design.md Decision 6: append 2026-06-13 empirical test record
- runtime-baseline spec: cite empirical evidence + tighten PR enablement scenario
- tasks.md: mark 6.1-6.5 done with deviation notes

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>